[project]
name = "retreat-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "pandas-gbq>=0.23.2",
    "bigframes>=1.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.2.5",
    "pandas>=2.2.3",
    "polars>=1.8.2",
    "numpy>=2.1.1",
    "scipy>=1.14.1",
    "statsmodels>=0.14.3",
    "matplotlib>=3.9.2",
    "plotnine>=0.13.6",
]

[tool.hatch.build.targets.wheel]
only-include = ["src/retreat_project", "data"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"data" = "retreat_project/data"
